--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Fri Feb 10 12:34:00 CST 2012
 app.grails.version=2.0.3
-app.name=broadleaf-grails-plugin
+app.name=broadleaf
 plugins.svn=1.0.1
