--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Wed Apr 25 16:09:54 CDT 2012
+#Fri Apr 27 16:56:27 CDT 2012
 app.grails.version=2.0.3
 app.name=broadleaf
+plugins.rest-client-builder=1.0.2
 plugins.svn=1.0.2
